--- a/Framework/Graphics/Graphics.vcxproj.filters
+++ b/Framework/Graphics/Graphics.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="Inc\MeshTypes.h">
       <Filter>Inc</Filter>
     </ClInclude>
+    <ClInclude Include="Inc\MeshBuilder.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Precompiled.cpp">
@@ -66,6 +69,9 @@
       <Filter>Src</Filter>
     </ClCompile>
     <ClCompile Include="Src\MeshBuffer.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\MeshBuilder.cpp">
       <Filter>Src</Filter>
     </ClCompile>
   </ItemGroup>
