--- a/Framework/Graphics/Graphics.vcxproj.filters
+++ b/Framework/Graphics/Graphics.vcxproj.filters
@@ -90,6 +90,12 @@
     <ClInclude Include="Inc\Model.h">
       <Filter>Inc</Filter>
     </ClInclude>
+    <ClInclude Include="Inc\ModelIO.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
+    <ClInclude Include="Inc\ModelManager.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Precompiled.cpp">
@@ -144,6 +150,12 @@
       <Filter>Src</Filter>
     </ClCompile>
     <ClCompile Include="Src\RenderObject.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\ModelIO.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\ModelManager.cpp">
       <Filter>Src</Filter>
     </ClCompile>
   </ItemGroup>
