--- a/VGP330/11_HelloPostProcessing/imgui.ini
+++ b/VGP330/11_HelloPostProcessing/imgui.ini
@@ -4,7 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Debug]
-Pos=32,11
-Size=333,669
+ViewportPos=392,203
+ViewportId=0xAD6468A3
+Size=333,715
 Collapsed=0
 
