Week7 Hellow Shadow

--- a/VGP330/09_HellowCelShader/imgui.ini
+++ b/VGP330/09_HellowCelShader/imgui.ini
@@ -4,7 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Debug]
-Pos=60,60
-Size=354,629
+ViewportPos=422,257
+ViewportId=0xAD6468A3
+Size=354,675
 Collapsed=0
 
