--- a/Framework/Graphics/Graphics.vcxproj.filters
+++ b/Framework/Graphics/Graphics.vcxproj.filters
@@ -126,6 +126,9 @@
     <ClInclude Include="Inc\Skeleton.h">
       <Filter>Inc</Filter>
     </ClInclude>
+    <ClInclude Include="Inc\AnimationUtil.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Precompiled.cpp">
@@ -207,6 +210,9 @@
       <Filter>Src</Filter>
     </ClCompile>
     <ClCompile Include="Src\AnimationBuilder.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\AnimationUtil.cpp">
       <Filter>Src</Filter>
     </ClCompile>
   </ItemGroup>
