--- a/VGP334/15_HelloSkeleton/imgui.ini
+++ b/VGP334/15_HelloSkeleton/imgui.ini
@@ -4,7 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Debug]
-Pos=60,60
-Size=333,445
+ViewportPos=187,275
+ViewportId=0xAD6468A3
+Size=333,560
 Collapsed=0
 
