--- a/Framework/Physics/Physics.vcxproj
+++ b/Framework/Physics/Physics.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="Inc\CollisionShape.h" />
     <ClInclude Include="Inc\Common.h" />
     <ClInclude Include="Inc\Physics.h" />
+    <ClInclude Include="Inc\PhysicsDebugDraw.h" />
     <ClInclude Include="Inc\PhysicsObject.h" />
     <ClInclude Include="Inc\PhysicsWorld.h" />
     <ClInclude Include="Inc\RigidBody.h" />
@@ -155,6 +156,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\CollisionShape.cpp" />
+    <ClCompile Include="Src\PhysicsDebugDraw.cpp" />
     <ClCompile Include="Src\PhysicsWorld.cpp" />
     <ClCompile Include="Src\Precompiled.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
