--- a/Framework/Physics/Physics.vcxproj
+++ b/Framework/Physics/Physics.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="Inc\PhysicsObject.h" />
     <ClInclude Include="Inc\PhysicsWorld.h" />
     <ClInclude Include="Inc\RigidBody.h" />
+    <ClInclude Include="Inc\SoftBody.h" />
     <ClInclude Include="Src\Precompiled.h" />
   </ItemGroup>
   <ItemGroup>
@@ -162,6 +163,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Src\RigidBody.cpp" />
+    <ClCompile Include="Src\SoftBody.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
